amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/annotation-mappings-invalid/report.report
ModelId: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/annotation-mappings-invalid/dialect.yaml
Profile: 
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/aml#dialect-error
  Message: Invalid type !!str (expected !!map) for annotation mapping node InvalidAnnotationMapping
  Severity: Violation
  Target: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/annotation-mappings-invalid/dialect.yaml#/declarations
  Property: 
  Range: [(6,28)-(6,64)]
  Location: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/annotation-mappings-invalid/dialect.yaml

- Constraint: http://a.ml/vocabularies/amf/core#declaration-not-found
  Message: Annotation mapping InexistentAnnotationMapping not found
  Severity: Violation
  Target: 
  Property: 
  Range: [(9,14)-(9,41)]
  Location: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/annotation-mappings-invalid/dialect.yaml

- Constraint: http://a.ml/vocabularies/amf/aml#dialect-error
  Message: Invalid type !!map (expected !!str) for semantic extension node invalid
  Severity: Violation
  Target: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/annotation-mappings-invalid/dialect.yaml/semantic-extensions
  Property: 
  Range: [(10,10)-(13,19)]
  Location: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/annotation-mappings-invalid/dialect.yaml
